--- a/Cflat/Parser/TestParser.cabal
+++ b/Cflat/Parser/TestParser.cabal
@@ -1,9 +1,9 @@
 name: TestParser
 version: 0.0
 build-depends: base, mtl, directory, HUnit
-exposed-modules: Parser
+exposed-modules: TypeCheck
 
 -- ˆÈ‰ºAŒJ‚è•Ô‚µ
 executable: TestParser
--- buildable: False
+buildable: False
 main-is: TestParser.hs
